<resources>
    <string name="app_name">Nocturnal</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_nocturnal">Nocturnal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="status">Status</string>
    <string name="activity">Activity</string>
    <string name="nocturnal_theme">Theme</string>
    <string name="data">Data</string>
    <string name="delete_cycle_data">Delete Cycle Data</string>
    <string name="you_can_delete_all_of_your_sleep_cycle_history_and_logs_here">You can delete all of your sleep cycle history, and logs here.</string>
    <string name="you_can_delete_your_sleep_cycle_data_from_nocturnal_and_start_fresh_again">You can delete your sleep cycle data from Nocturnal and start fresh again.</string>
    <string name="current_cycle">Current Cycle</string>
</resources>
