<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:clipToPadding="false"
    android:layout_height="match_parent"
    tools:context=".Nocturnal">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:layout_marginBottom="55dp"
        android:id="@+id/mass_container">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:id="@+id/activity">
            <androidx.recyclerview.widget.RecyclerView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:clipToPadding="false"
                android:id="@+id/recycler"
                android:layout_height="match_parent"
                tools:context="com.volmit.nocturnal.Nocturnal">
            </androidx.recyclerview.widget.RecyclerView>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:visibility="gone"
            android:id="@+id/status">
            <ScrollView
                android:layout_width="match_parent"
                android:clipToPadding="false"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:clipToPadding="false"
                        android:padding="10dp"
                        android:translationZ="8dp"
                        android:elevation="50dp"
                        android:id="@+id/summary_card">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_margin="7dp">
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/sicon"
                                    android:src="@drawable/baseline_data_usage_black_18dp"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/current_cycle"
                                    android:textSize="24sp"
                                    android:layout_marginBottom="4dp"
                                    android:layout_marginLeft="3dp"/>
                            </LinearLayout>
                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_gravity="start">
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="Average Cycle Duration"
                                        android:textSize="18sp"/>
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_gravity="start"
                                        android:layout_height="wrap_content"
                                        android:text="Sleep Effectiveness"
                                        android:textSize="18sp"/>
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="start"
                                        android:text="Tracked Cycle Count"
                                        android:textSize="18sp"/>
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="start"
                                        android:text="Cycle Deviance"
                                        android:textSize="18sp"/>
                                </LinearLayout>
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_gravity="end">
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="26 Hours"
                                        android:layout_gravity="end"
                                        android:gravity="end"
                                        android:textSize="18sp"
                                        android:textColor="@color/colorPrimary"/>
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="227%"
                                        android:layout_gravity="end"
                                        android:gravity="end"
                                        android:textSize="18sp"
                                        android:textColor="@color/colorPrimary"/>
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="29 Absolute Cycles"
                                        android:layout_gravity="end"
                                        android:gravity="end"
                                        android:foregroundGravity="right"
                                        android:textSize="18sp"
                                        android:textColor="@color/colorPrimary"/>
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="4 Hours per Day"
                                        android:layout_gravity="end"
                                        android:gravity="end"
                                        android:foregroundGravity="right"
                                        android:textSize="18sp"
                                        android:textColor="@color/colorPrimary"/>
                                </LinearLayout>
                            </FrameLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </ScrollView>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:visibility="gone"
            android:id="@+id/settings">
            <ScrollView
                android:layout_width="match_parent"
                android:clipToPadding="false"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:clipToPadding="false"
                        android:padding="10dp"
                        android:translationZ="8dp"
                        android:elevation="50dp"
                        android:id="@+id/settings_card">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_margin="7dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/nocturnal_theme"
                                android:textSize="24sp"
                                android:layout_marginBottom="4dp"
                                android:layout_marginLeft="3dp"/>
                            <RadioGroup
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                                <RadioButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Light"
                                    android:id="@+id/lightmode"/>
                                <RadioButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Dark"
                                    android:id="@+id/darkmode"/>
                                <RadioButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="NOLED"
                                    android:id="@+id/oledmode"/>
                            </RadioGroup>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:clipToPadding="false"
                        android:padding="10dp"
                        android:id="@+id/wipe_card"
                        android:translationZ="8dp"
                        android:elevation="50dp">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_margin="7dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/data"
                                android:textSize="24sp"
                                android:layout_marginBottom="4dp"
                                android:layout_marginLeft="3dp"/>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_marginLeft="3dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/you_can_delete_your_sleep_cycle_data_from_nocturnal_and_start_fresh_again"/>
                                <Button
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="end"
                                    style="@style/Widget.AppCompat.Button.Borderless"
                                    android:text="@string/delete_cycle_data"
                                    android:id="@+id/delete_cycle_data"
                                    android:textSize="14sp"/>
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </ScrollView>
        </FrameLayout>
    </FrameLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:theme="?android:attr/textColorPrimary"
        app:menu="@menu/navigation" />
</androidx.constraintlayout.widget.ConstraintLayout>